# filewatch

./: .gitignore  Cargo.toml  README.md
fixtures/: example.yml
scripts/: gen-testdata.sh
src/: main.rs  regex.rs  rules.rs
src/filewatch/: mod.rs
src/filewatch/rules/: mod.rs  regex.rs
src/rules/: files.rs
