[package]
name = "filewatch"
version = "0.1.0"
authors = ["Kyle Lucas <kyle@kylelucas.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
walkdir = "2"
rayon = "1.5.3"
clap = { version = "4.0.15", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.17"
simplelog = "0.12.0"
simple_logger = "2.3.0"
indicatif = "0.17.1"
console = "0.15.2"
anyhow = "1.0.65"
